force-app/main/default/objects/PublishedEventsTracker__c/PublishedEventsTracker__c.object-meta.xml
<CustomObject>
    <label>PublishedEventsTracker</label>
    <nameField>
        <label>PublishedEventTracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PublishedEventsTracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>