force-app/main/default/objects/PublishedEventsTracker__c/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <label>Credit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>