force-app/main/default/objects/PublishedEventsTracker__c/fields/Dunbrdst__c.field-meta.xml
<CustomField>
    <fullName>Dunbrdst__c</fullName>
    <label>Dunbrdst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>