force-app/main/default/objects/PublishedEventsTracker__c/fields/Group_3_UMO__c.field-meta.xml
<CustomField>
    <fullName>Group_3_UMO__c</fullName>
	<description>This field is used to Enter Group 3 UMO oil</description>
    <label>Group 3 UMO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>