force-app/main/default/objects/PublishedEventsTracker__c/fields/Headline_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Headline_Expiration_Date__c</fullName>
    <description>This field is used to show the visibility of account banner.</description>
    <label>Headline Expiration Date</label>
    <type>DateTime</type>
</CustomField>