force-app/main/default/objects/PublishedEventsTracker__c/fields/KAM_Manager__c.field-meta.xml
<CustomField>
    <fullName>KAM_Manager__c</fullName>
    <label>CAM Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>