force-app/main/default/objects/PublishedEventsTracker__c/fields/Key_Buying_Decision__c.field-meta.xml
<CustomField>
    <fullName>Key_Buying_Decision__c</fullName>
    <label>Key Buying Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>