force-app/main/default/objects/PublishedEventsTracker__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <label>LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>