force-app/main/default/objects/PublishedEventsTracker__c/fields/LastUpdate_CRM__c.field-meta.xml
<CustomField>
    <fullName>LastUpdate_CRM__c</fullName>
    <label>LastUpdate_CRM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>