force-app/main/default/objects/PublishedEventsTracker__c/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <label>Lost To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>