force-app/main/default/objects/PublishedEventsTracker__c/fields/Oracle_Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Invoice_number__c</fullName>
    <label>Oracle Invoice number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>