force-app/main/default/objects/PublishedEventsTracker__c/fields/Pay_To_Locality1__c.field-meta.xml
<CustomField>
    <fullName>Pay_To_Locality1__c</fullName>
    <label>Pay_To_Locality1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>