force-app/main/default/objects/PublishedEventsTracker__c/fields/Pay_To_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_To_Post_Code__c</fullName>
    <label>Pay To Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>