force-app/main/default/objects/PublishedEventsTracker__c/fields/PayTo_Address1__c.field-meta.xml
<CustomField>
    <fullName>PayTo_Address1__c</fullName>
    <label>PayTo_Address1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>