force-app/main/default/objects/PublishedEventsTracker__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <label>Risk Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>