force-app/main/default/objects/PublishedEventsTracker__c/fields/SRP__c.field-meta.xml
<CustomField>
    <fullName>SRP__c</fullName>
    <label>SRP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>