force-app/main/default/objects/PublishedEventsTracker__c/fields/State_EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>State_EPA_ID__c</fullName>
    <label>State_EPA_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>