force-app/main/default/objects/PublishedEventsTracker__c/fields/Territory_Override__c.field-meta.xml
<CustomField>
    <fullName>Territory_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territory Override</label>
    <type>Checkbox</type>
</CustomField>