force-app/main/default/objects/PublishedEventsTracker__c/fields/Waste_Oil__c.field-meta.xml
<CustomField>
    <fullName>Waste_Oil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waste Oil</label>
    <type>Checkbox</type>
</CustomField>