force-app/main/default/objects/PublishedEventsTracker__c/fields/Win_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Win_Invoice_Number__c</fullName>
    <label>Win Invoice Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>